<resources>
    <string name="app_name">馆易行</string>
    <string name="main_page_function1">展品一览</string>
    <string name="main_page_function2">自助讲解</string>
    <string name="main_page_function3">掌中导游</string>
    <string name="main_page_function4">纪念品商城</string>
    <string name="store_goods">商品详情</string>
    <string name="store_cart">购物车</string>
    <string name="news_info">馆内新闻</string>
    <string name="news_info_get_full_news">查看全文</string>
    <string name="select_how_to_guide">参观方式</string>
    <string name="select_selection1">推荐路线</string>
    <string name="select_selection2">自定义路线</string>
    <string name="change_exhibit_submit">生成路线</string>
    <string name="change_exhibit">路线调整</string>
    <string name="exhibit_guess_you_like">猜您喜欢</string>
    <string name="exhibit_intro">展品介绍</string>
    <string name="build_route">确认路线</string>
    <string name="build_route_lable">预计时间:</string>
    <string name="build_route_btn1">查看简介</string>
    <string name="build_route_btn2">调整路线</string>
    <string name="build_route_btn3">开始参观</string>
    <string name="minute">分钟</string>
    <string name="route">路线：</string>

</resources>
