<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_build_route"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.xaut.ipv6smartmuseumclient.BuildRouteActivity"
    android:background="@color/main_bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:id="@+id/tvRouteTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/route_time"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/build_route_lable"
                        android:textSize="24sp"
                        android:textColor="@android:color/background_light" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:textColor="@android:color/background_light"
                        android:id="@+id/tvRouteTime" />
                </LinearLayout>

                <Button
                    android:text="@string/build_route_btn1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/btnRoute1"
                    android:background="@drawable/select_button" />

                <Button
                    android:text="@string/build_route_btn2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnRoute2"
                    android:background="@drawable/select_button"
                    android:layout_marginTop="5dp" />

                <Button
                    android:text="@string/build_route_btn3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/btnRoute3"
                    android:background="@drawable/select_button" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
